p2/apps-config/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app3-container
        image: hashicorp/http-echo
        args:
          - "-text=Hello from app2"
        ports:
          - containerPort: 5678
