p2/apps-config/app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  labels:
    app: app1
spec:
  selector:
    app: app1 
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1-container
        image: nginx:alpine
        ports:
        - containerPort: 8080
