p2/apps-config/app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  labels:
    app: app3
spec:
  selector:
    app: app3
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3-container
        image: nginx:alpine
        ports:
        - containerPort: 8080
